--- a/package.json
+++ b/package.json
@@ -21,11 +21,14 @@
     "@angular/platform-browser": "~9.1.0",
     "@angular/platform-browser-dynamic": "~9.1.0",
     "@angular/router": "~9.1.0",
+    "@ng-bootstrap/ng-bootstrap": "^6.0.3",
     "@ng-select/ng-select": "^4.0.0",
     "angular-notifier": "^6.0.1",
     "bootstrap": "^4.4.1",
+    "bootstrap4-toggle": "^3.6.1",
     "jquery": "^3.4.1",
     "ng-snotify": "^9.0.1",
+    "ng2-search-filter": "^0.5.1",
     "ngx-bootstrap": "^5.6.1",
     "ngx-mat-select-search": "^2.1.2",
     "ngx-toastr": "^12.0.1",
