--- a/composer.json
+++ b/composer.json
@@ -39,7 +39,9 @@
         },
         "classmap": [
             "database/seeds",
-            "database/factories"
+            "database/factories",
+            "app/Repositories"
+
         ]
     },
     "autoload-dev": {
