--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "ng2-search-filter": "^0.5.1",
     "ngx-bootstrap": "^5.6.1",
     "ngx-mat-select-search": "^2.1.2",
+    "ngx-order-pipe": "^2.0.4",
+    "ngx-pagination": "^5.0.0",
     "ngx-toastr": "^12.0.1",
     "rxjs": "~6.5.4",
     "sweetalert2": "^9.10.9",
