--- a/package.json
+++ b/package.json
@@ -28,13 +28,16 @@
     "bootstrap": "^4.4.1",
     "bootstrap4-toggle": "^3.6.1",
     "jquery": "^3.4.1",
+    "laravel-echo": "^1.8.0",
     "ng-snotify": "^9.0.1",
     "ng2-search-filter": "^0.5.1",
     "ngx-bootstrap": "^5.6.1",
     "ngx-mat-select-search": "^2.1.2",
     "ngx-order-pipe": "^2.0.4",
     "ngx-pagination": "^5.0.0",
+    "ngx-spinner": "^9.0.2",
     "ngx-toastr": "^12.0.1",
+    "pusher-js": "^6.0.3",
     "rxjs": "~6.5.4",
     "sweetalert2": "^9.10.9",
     "tslib": "^1.10.0",
