--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@angular/common": "~9.1.0",
     "@angular/compiler": "~9.1.0",
     "@angular/core": "~9.1.0",
-    "@angular/forms": "^9.1.11",
+    "@angular/forms": "~9.1.0",
+
     "@angular/localize": "~9.1.0",
     "@angular/material": "^9.2.0",
     "@angular/platform-browser": "~9.1.0",
