--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,11 @@
         "guzzlehttp/guzzle": "^6.3",
         "laravel/framework": "^7.0",
         "laravel/tinker": "^2.0",
+        "nexmo/client": "^2.0",
+        "nexmo/laravel": "^2.2",
+        "paypal/rest-api-sdk-php": "^1.14",
+        "predis/predis": "^1.1",
+        "pusher/pusher-php-server": "^4.1",
         "tymon/jwt-auth": "dev-develop"
     },
     "require-dev": {
