--- a/angular.json
+++ b/angular.json
@@ -33,6 +33,7 @@
               "node_modules/sweetalert2/dist/sweetalert2.min.css",
               "node_modules/ngx-bootstrap/datepicker/bs-datepicker.css",
               "node_modules/bootstrap4-toggle/css/bootstrap4-toggle.min.css"
+
             ],
             "scripts": [
               "node_modules/jquery/dist/jquery.min.js",
@@ -101,7 +102,10 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "src/assets/css/swiper.css",
+              "src/assets/css/demo.css",
+              "src/assets/css/styles.css"
             ],
             "scripts": []
           }
